; ModuleID = '/home/carl/AnghaBench/linux/mm/extr_oom_kill.c_oom_killer_disable.c'
source_filename = "/home/carl/AnghaBench/linux/mm/extr_oom_kill.c_oom_killer_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@oom_lock = common dso_local global i32 0, align 4
@oom_killer_disabled = common dso_local global i32 0, align 4
@oom_victims_wait = common dso_local global i32 0, align 4
@oom_victims = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"OOM killer disabled.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @oom_killer_disable(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %5 = call i64 @mutex_lock_killable(i32* @oom_lock)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %23

8:                                                ; preds = %1
  store i32 1, i32* @oom_killer_disabled, align 4
  %9 = call i32 @mutex_unlock(i32* @oom_lock)
  %10 = load i32, i32* @oom_victims_wait, align 4
  %11 = call i32 @atomic_read(i32* @oom_victims)
  %12 = icmp ne i32 %11, 0
  %13 = xor i1 %12, true
  %14 = zext i1 %13 to i32
  %15 = load i64, i64* %3, align 8
  %16 = call i64 @wait_event_interruptible_timeout(i32 %10, i32 %14, i64 %15)
  store i64 %16, i64* %4, align 8
  %17 = load i64, i64* %4, align 8
  %18 = icmp sle i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %8
  %20 = call i32 (...) @oom_killer_enable()
  store i32 0, i32* %2, align 4
  br label %23

21:                                               ; preds = %8
  %22 = call i32 @pr_info(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  store i32 1, i32* %2, align 4
  br label %23

23:                                               ; preds = %21, %19, %7
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i64 @mutex_lock_killable(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i64 @wait_event_interruptible_timeout(i32, i32, i64) #1

declare dso_local i32 @atomic_read(i32*) #1

declare dso_local i32 @oom_killer_enable(...) #1

declare dso_local i32 @pr_info(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
